option java_outer_classname="UpdateResponseProtocol";
package Alachisoft.NosDB.Common.Protobuf;
option java_package = "com.alachisoft.nosdb.common.protobuf";

message UpdateResponse 
{
	optional int64 affectedDocuments = 1;
}